--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.16",
     "i": "^0.3.7",
     "npm": "^10.2.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
     "sass": "^1.69.5",
