--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jas-cv",
   "version": "0.1.0",
-  "homepage": "https://Djassss.github.io/jas-cv",
+  "homepage": "https://Djassss.github.io/web-pages",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
